--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
