Настройка router и redux

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
     "paths": {
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
-      "@utils/*": ["utils/*"],
-      "@data/*": ["data/*"]
+      "@pages/*": ["pages/*"],
+      "@state/*": ["state/*"],
+      "@hooks/*": ["hooks/*"],
     },
 
     /* Linting */
